# raven_ai_agent

./: .gitignore  20260516T131227Z__bot-iot-l01__ack_routing_disposition_and_task_151_accepted.md  AGENTS.md  CLAUDE.md  CLAUDE.shared.md  MANIFEST.in  RAVEN_SMARTER_REVIEW.md  README.md  check_socketio.sh  debug_payment_submit.py  deploy_sandbox.sh  diagnose_payment_chain.py  frappe-bench.service  frappe-socketio.service  hooks.py  modules.txt  openwiki-update.yml  outbox_sent_2026-05-09_first_day_brief.md  outbox_sent_2026-05-16_cowork_raven_helpscreen_review.md  outbox_sent_2026-05-20_lessons_harvest_for_cowork_research.md  package.json  push_to_git_plus.sh  pyproject.toml  rpi_client_MOVED.md  setup.py  setup_services.sh  technical_specification_for_ai_agent_app_migrator.md  test_minimax_direct.py  test_phase1_validation.py  test_phase2_validation.py  test_phase3_validation.py  test_phase4_validation.py  workspace.json
.git_backup_20260507_184001/: test_standalone_memory.py
agents/: __init__.py  rnd_agent.py  sales_order_followup_agent.py
api/: agent.py  agent_v2.py  bom_fixer.py  channel_utils.py  webhook.py  workflows.py
channels/: __init__.py  base.py  raven_channel.py  whatsapp.py
config/: __init__.py  doctype_fields.py  environment.py
docs/: 00_ORCHESTRATOR_PROJECT_PLAN.md  AGENTS.md  AMB_Content_Distribution_Project_Spec.md  BOM_AGENT_V2_DESIGN.md  CRM_HOOKS_PATCH.md  CRM_SKILL_PLAN.md  FRAPPE_CLOUD_MINIMAL_HOOKS.md  PARALLEL_TEAM_INITIAL_REPORT.md  PARALLEL_TEAM_MULTIPLATFORM_SPEC.md  RAVEN_ENVIRONMENT_CONFIG.md  RAVEN_INFRASTRUCTURE_FIX_HANDOUT.md  (+11 more)
(+370 files in other folders)
